<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:foregroundGravity="center_horizontal"
    android:layout_marginBottom="5dp"
    android:background="@drawable/item_film_border"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/item_film_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView
        android:id="@+id/item_film_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/item_film_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/heart"
        android:src="@drawable/film_like_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/item_film_imageview"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageView
        android:src="@drawable/film_wacther_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/item_film_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/item_like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heart" />
    <TextView
        android:id="@+id/item_film_releasedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:layout_marginStart="25dp"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@id/item_like_count"
        app:layout_constraintTop_toBottomOf="@id/heart"
        />
    <TextView
        android:id="@+id/item_film_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/item_like_count"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>