<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activity.DetailActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/back_fragment_button_icon"
            tools:ignore="ContentDescription"
            android:onClick="backActivity"/>
        <TextView
            android:id="@+id/film_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="20sp"
            />
    </Toolbar>

    <ImageView
        android:id="@+id/fragment_detail_imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_detail_recyclerview"
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:paddingHorizontal="10dp"
        android:layout_height="130dp"
        android:layout_marginTop="25dp"
        android:translationZ="0dp"
        android:background="@color/backgroundRecyclerview"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_imageView" />

    <LinearLayout
        android:id="@+id/likedatedirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:gravity="center"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/item_film_border"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="5dp"
            android:paddingVertical="30dp"
            android:translationZ="2dp">

            <ImageView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/film_like_heart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/like_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/like"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/like" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0.33"
            android:background="@drawable/item_film_border"
            android:paddingHorizontal="5dp"
            android:paddingVertical="30dp"
            android:translationZ="20dp">

            <ImageView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/film_wacther_clock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/like"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0.33"
            android:background="@drawable/item_film_border"
            android:paddingHorizontal="5dp"
            android:paddingVertical="30dp"
            android:translationZ="2dp">

            <ImageView
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/director_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/director_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/like"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/director" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/backgroundFragment"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_recyclerview"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleAcilisMetni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metin"
            android:paddingTop="60dp"
            android:translationZ="0dp"
            android:background="@color/backgroundFragment"
            android:paddingHorizontal="20dp"
            android:textStyle="bold"
            android:textSize="20sp" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/fragment_detail_descreption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundFragment"
                android:paddingHorizontal="20dp"
                />
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>